# UbiForm

./: .gitignore  Doxyfile  LICENSE  Readme.md  UbiForm Library Description.md
CMake/: CMakeLists.txt  CMakeLists.txt.in
UbiForm/: Component.cpp  Component.h  ComponentManifest.cpp  ComponentManifest.h  EndpointMessage.cpp  EndpointSchema.cpp  EndpointSchema.h  GenericSchema.h  SocketMessage.cpp  SocketMessage.h  SystemEnums.h  component_unittest.cpp  general_functions.cpp  general_functions.h  library.cpp  library.h  test_Component.h  test_ComponentManifest.cpp  test_ComponentManifest.h  test_EndpointMessage.h  test_EndpointSchema.h  test_SocketMessage.h
UbiForm/Endpoints/: DataReceiverEndpoint.cpp  DataReceiverEndpoint.h  DataSenderEndpoint.cpp  DataSenderEndpoint.h  Endpoint.cpp  PairEndpoint.cpp  PairEndpoint.h  PublisherEndpoint.cpp  PublisherEndpoint.h  ReplyEndpoint.cpp  ReplyEndpoint.h  RequestEndpoint.cpp  RequestEndpoint.h  SubscriberEndpoint.cpp  SubscriberEndpoint.h
UbiForm/ReconfigEndpoints/: BackgroundListener.cpp  BackgroundListener.h  BackgroundRequester.cpp  BackgroundRequester.h
UbiForm/ResourceDiscovery/: ComponentRepresentation.cpp  ComponentRepresentation.h  ResourceDiscoveryConnEndpoint.cpp  ResourceDiscoveryConnEndpoint.h  ResourceDiscoveryHubEndpoint.cpp  ResourceDiscoveryHubEndpoint.h  ResourceDiscoveryStore.cpp  ResourceDiscoveryStore.h  test_ComponentRepresentation.h  test_ResourceDiscoveryConnEndpoint.h  test_ResourceDiscoveryHubEndpoint.h  test_ResourceDiscoveryStore.h
UbiForm/SchemaRepresentation/: EndpointSchema.cpp  EndpointSchema.h  GenericSchema.cpp  GenericSchema.h  test_EndpointSchema.h
UbiForm/SystemSchemas/: SystemSchemas.cpp  SystemSchemas.h  component_schema.json  endpoint_creation_request.json  endpoint_creation_response.json  general_endpoint_request.json  general_endpoint_response.json  general_resource_discovery_request.json  resource_discovery_addition_request.json  resource_discovery_addition_response.json  resource_discovery_by_id_request.json  resource_discovery_by_id_response.json  resource_discovery_by_schema_request.json  resource_discovery_by_schema_response.json  resource_discovery_component_ids_request.json  resource_discovery_component_ids_response.json  resource_discovery_update_request.json  test_SystemSchemas.h
UbiForm/Utilities/: ExceptionClasses.cpp  GetIPAddress.cpp  GetIPAddress.h  SystemEnums.cpp  SystemEnums.h  UtilityFunctions.cpp  UtilityFunctions.h  base64.cpp  base64.h  test_GetIPAddresses.h
UbiForm/endpoints/: DataReceiverEndpoint.cpp  DataReceiverEndpoint.h  DataSenderEndpoint.cpp  DataSenderEndpoint.h  EndpointSchema.cpp  EndpointSchema.h  PairEndpoint.cpp  PairEndpoint.h  PublisherEndpoint.cpp  PublisherEndpoint.h  ResourceDiscoveryConnEndpoint.h  ResourceDiscoveryHubEndpoint.cpp  ResourceDiscoveryHubEndpoint.h  SubscriberEndpoint.cpp  SubscriberEndpoint.h  test_EndpointSchema.h
docs/: BackgroundListener_8h.html  BackgroundListener_8h_source.html  DataSenderEndpoint_8h.html  EndpointMessage_8h.html  EndpointSchema_8h.html  Endpoint_8h.html  ExceptionClasses_8h.html  PairEndpoint_8h_source.html  PublisherEndpoint_8h.html  PublisherEndpoint_8h_source.html  RequestEndpoint_8h.html  ResourceDiscoveryHubEndpoint_8h.html  ResourceDiscoveryHubEndpoint_8h_source.html  ResourceDiscoveryStore_8h_source.html  SubscriberEndpoint_8h.html  SystemEnums_8h_source.html  classBackgroundRequester-members.html  classBackgroundRequester.html  classComponent-members.html  classComponent.html  classComponentManifest.html  classDataReceiverEndpoint-members.html  classDataReceiverEndpoint.html  classEndpoint-members.html  classEndpoint.html  classEndpointMessage-members.html  classEndpointOpenError-members.html  classEndpointSchema.html  classNngError-members.html  classPairEndpoint-members.html  classRemoteError-members.html  classReplyEndpoint.html  classResourceDiscoveryConnEndpoint-members.html  classResourceDiscoveryHubEndpoint-members.html  classSubscriberEndpoint-members.html  classes.html  dir_0f07361b1c1bd8ea2d8b53ffab94cd1f.html  dir_1f5dd7462066b6a568892407e9ea63b2.html  dir_23ea2a01de45386d3ee0d958ecd20586.html  functions.html  (+20 more)
docs/html/: BackgroundRequester_8h.html  BackgroundRequester_8h_source.html  ComponentManifest_8h.html  ComponentManifest_8h_source.html  ComponentRepresentation_8h.html  ComponentRepresentation_8h_source.html  Component_8h.html  Component_8h_source.html  DataReceiverEndpoint_8h.html  DataReceiverEndpoint_8h_source.html  DataSenderEndpoint_8h_source.html  EndpointMessage_8h_source.html  EndpointSchema_8h_source.html  Endpoint_8h_source.html  ExceptionClasses_8h_source.html  PairEndpoint_8h.html  Readme_8md.html  ReplyEndpoint_8h.html  ReplyEndpoint_8h_source.html  RequestEndpoint_8h_source.html  ResourceDiscoveryConnEndpoint_8h.html  ResourceDiscoveryConnEndpoint_8h_source.html  ResourceDiscoveryStore_8h.html  SubscriberEndpoint_8h_source.html  SystemEnums_8h.html  annotated.html  classAccessError-members.html  classAccessError.html  classBackgroundListener-members.html  classBackgroundListener.html  classComponentManifest-members.html  classComponentRepresentation-members.html  classComponentRepresentation.html  classDataSenderEndpoint-members.html  classDataSenderEndpoint.html  classEndpointMessage.html  classEndpointOpenError.html  classEndpointSchema-members.html  classNngError.html  classPairEndpoint.html  (+50 more)
docs/search/: all_5.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  (+33 more)
evaluation/: ReadMe.md  eval_ScalabilityStreaming.cpp  pubSubSpeed.cpp  runPubSubEval.sh  scalabilityStreaming.cpp  sectionSpeeds.cpp  streamingSpeed.cpp
examples/: AsyncExample.cpp  AsyncRecvExample.cpp  MusicPlayerExample.cpp  PairConnectionExample.cpp  PubSubExample.cpp  ReadMe.md  ReconfigurationExample.cpp  ResourceDiscoveryExample.cpp  SimpleStreamingExample.cpp
src/: library.cpp
tests/: ReadMe.md  ReconfigurationIntegrationTest.h  RunTests.cpp  test_EndpointCreation.h  test_ReconfigurationIntegration.h  test_Streaming.h
(+115 files in other folders)
